...

  @override
  String toString() => 'WorkspaceMismatchException: $message';
}

class InsufficientPermissionException implements Exception {
  InsufficientPermissionException(this.message);

  final String message;

  @override
  String toString() => 'InsufficientPermissionException: $message';
}
...
